--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -18,20 +18,12 @@
             =link_to "Welcome", root_path
         %li
           = link_to 'Current Projects', "http://ecm.ucsd.edu/REU.html"
-        - if params[:controller] == 'applicants/registrations' && params[:action] !=  'status'
-          %li.active
-            - if applicant_signed_in?
-              =link_to "Profile", edit_applicant_registration_path, :class => 'active'
-            - else
-              =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-              =content_tag :li, link_to('Admin', rails_admin_path)
-        - else
-          %li
-            - if applicant_signed_in?
-              =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
-            - else
-              =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
-              =content_tag :li, link_to('Admin', rails_admin_path)
+        %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
+          - if applicant_signed_in?
+            =link_to "Profile", edit_applicant_registration_path, :class => 'active'
+          - else
+            =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
+            =content_tag :li, link_to('Admin', rails_admin_path) if !current_user
 
 
         - if params[:controller] == 'applicants/academic_records'
