--- a/app/views/applicants/recommendations/edit.html.erb
+++ b/app/views/applicants/recommendations/edit.html.erb
@@ -1,165 +1,116 @@
-<%= form_for(@recommendation, :url => applicants_recommendations_update_url, :html => { :method => :put }) do |f| %>
-  <%= errors_for @recommendation %>
-  <%= f.hidden_field :received_at, :value => Time.now %>
+<div class="panel panel-primary">
+  <%= form_for(@recommendation, :url => applicants_recommendations_update_url, :html => { :method => :put }) do |f| %>
+    <div class="panel-heading">Recommendation for <%= @recommendation.applicant.name %></div>
+    <div class="panel-body">
 
-  <div class='row'>
-    <div class="span12">
-      <div class="inner">
-        <h2>Recommendation for <%= @recommendation.applicant.name %></h2>
-      </div>
-    </div>
+      <%= errors_for @recommendation %>
+      <%= f.hidden_field :received_at, :value => Time.now %>
 
+      <section class='recommender'>
 
-    <div class="span9">
-
-      <div class='row'>
-
-        <section class='recommender'>
-          <div class="span9">
-
-            <%= f.fields_for :recommender do |builder| %>
-              <fieldset>
-                <div class="inner">
-                  <legend>Please update your contact info</legend>
-                </div>
-                <div class="row">
-
-                <div class="span4">
-                  <div class="inner">
-                    <%= builder.text_field :first_name, :placeholder => 'First Name' %>
-                  </div>
-                </div>
-
-                <div class="span4 offset1">
-                  <div class="inner">
-                    <%= builder.text_field :last_name, :placeholder => 'Last Name' %>
-                  </div>
-                </div>
-
-                <div class="span4">
-                  <div class="inner">
-                    <%= builder.text_field :email, :placeholder => :Email %>
-                  </div>
-                </div>
-
-                <div class="span4 offset1">
-                  <div class="inner">
-                    <%= builder.text_field :phone, :placeholder => :Phone %>
-                  </div>
-                </div>
-
-                <div class="span9">
-                  <div class="inner">
-                    <%= builder.text_field :url, :placeholder => :URL %>
-                  </div>
-                </div>
-
-
-                <div class="span4">
-                  <div class="inner">
-                    <%= builder.text_field :organization, :placeholder => 'Organization or University' %>
-                  </div>
-                </div>
-
-                <div class="span4 offset1">
-                  <div class="inner">
-                    <%= builder.text_field :department, :placeholder => :Department %>
-                  </div>
-                </div>
-
-                <div class="span9">
-                  <div class="inner">
-                    <%= builder.text_field :title, :placeholder => :Title %>
-                  </div>
-                </div>
-
-                <hr class="inner clearfix" />
-
-              </fieldset>
-            <%- end -%>
-          </div>
-        </section>
-        <section class='recommender'>
-          <div class="span9">
-            <div class='inner'>
-
-              <%#= student_waiver %>
-
-              <div>
-              	<label>How long have you known the applicant?</label>
-              	<%= f.select :known_applicant_for, %w{ <1\ year 1-2\ years 2-3\ years 3-4\ years >4\ years } %>
+        <div class='form-group'>
+          <%= f.fields_for :recommender do |builder| %>
+            <fieldset>
+              <div class="inner">
+                <legend>Please update your contact info</legend>
               </div>
 
-              <br />
+              <%= builder.label :first_name %>
+              <%= builder.text_field :first_name, :placeholder => 'George', :class => 'form-control' %>
+              <%= builder.label :last_name %>
+              <%= builder.text_field :last_name, :placeholder => 'Washington', :class => 'form-control'%>
+              <%= builder.label :email %>
+              <%= builder.text_field :email, :placeholder => 'george@whitehouse.gov', :class => 'form-control' %>
+              <%= builder.label :phone %>
+              <%= builder.text_field :phone, :placeholder => '555-555-5555', :class => 'form-control' %>
+              <%= builder.label :url %>
+              <%= builder.text_field :url, :placeholder => 'http://whitehouse.gov', :class => 'form-control' %>
+              <%= builder.label :organizatoin, 'Organization or University' %>
+              <%= builder.text_field :organization, :placeholder => 'George Washington Univierity', :class => 'form-control' %>
+              <%= builder.label :department %>
+              <%= builder.text_field :department, :placeholder => 'Computer Science', :class => 'form-control' %>
+              <%= builder.label :title %>
+              <%= builder.text_field :title, :placeholder => 'Chair', :class => 'form-control' %>
 
-              <div>
-              	<label>In what capacity have you known the applicant?</label>
-              	<%= f.select :known_capacity, %w{ Undergrad\ in\ one\ course Undergrad\ in\ multiple\ courses Research\ Assistant Teaching\ Assistant Other} %>
-              </div>
+              <hr class="inner clearfix" />
 
-              <br />
+            </fieldset>
+          <%- end -%>
+        </div>
+      </section>
+      <section class='recommender'>
+        <div class='form-group'>
+          <label>How long have you known the applicant?</label>
+          <%= f.select :known_applicant_for, %w{ <1\ year 1-2\ years 2-3\ years 3-4\ years >4\ years } %>
 
-              <div>
-              	<p>Please rate the applicant's overall promise in comparison with other individuals whom you have known at similar stages in their careers:</p>
+          <br /><br />
 
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="Top 1%">
-                  Top 1%
-                </label>
+          <label>In what capacity have you known the applicant?</label>
+          <%= f.select :known_capacity, %w{ Undergrad\ in\ one\ course Undergrad\ in\ multiple\ courses Research\ Assistant Teaching\ Assistant Other} %>
 
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="Top 5%">
-                  Top 5%
-                </label>
+          <br /><br />
 
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="Top 10%">
-                  Top 10%
-                </label>
+          <div class='form-group'>
+            <label>Please rate the applicant's overall promise in comparison with other individuals whom you have known at similar stages in their careers:</label>
 
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="Top 25%">
-                  Top 25%
-                </label>
-
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="below average">
-                  average
-                </label>
-
-              	<label class="radio">
-                  <input name="recommendation[overall_promise]" type="radio" value="below average">
-                  below average
-                </label>
-              </div>
-
-              <br />
-
-              <div>
-              	<label>Is your institution primarily an undergraduate institution?</label>&nbsp;<%= f.select :undergraduate_institution, %w{ No Yes } %>
-              </div>
-
-              <br />
-
-              <div>
-              	<p>Please comment on the quality of the applicant's previous work, academic abilities, and potential as a researcher. If applicable, please comment on any circumstances that may be helpful in evaluating the applicant's academic performance.</p>
-              	<p>You can copy and paste into the text box below.</p>
-              </div>
-
-              <div><%= f.text_area :body, rows: 5 %></div>
+            <div class="radio">
+              <input name="recommendation[overall_promise]" id='top1' type="radio" value="Top 1%">
+              <label for="top1">Top 1%</label>
             </div>
+            <div class="radio">
+              <input name="recommendation[overall_promise]" type="radio" value="Top 5%" id='top5'>
+              <label for="top5">Top 5%</label>
+            </div>
+
+            <div class="radio">
+              <input name="recommendation[overall_promise]" type="radio" value="Top 10%" id='top10'>
+              <label for="top10">Top 10%</label>
+            </div>
+
+            <div class="radio">
+              <input name="recommendation[overall_promise]" type="radio" value="Top 25%" id='top25'>
+              <label for="top25">Top 25%</label>
+            </div>
+
+            <div class="radio">
+              <input name="recommendation[overall_promise]" type="radio" value="average" id='average'>
+              <label for="average">average</label>
+            </div>
+
+            <div class="radio">
+              <input name="recommendation[overall_promise]" type="radio" value="below average" id='belowaverage'>
+              <label for="belowaverage">below average</label>
+            </div>
+
           </div>
-        </section>
-      </div> <!-- end .row -->
-    </div> <!-- end .span9 -->
-    <div class="span12">
-      <div class="inner">
-        <hr />
-        <p class='clear'><%= f.submit "Submit Recommendation Info", :class => "btn btn-success" %></p>
-      	<p><em>Thank you for taking the time to evaluate this applicant. Your opinion will be carefully considered during participant selection.</em></p>
-      </div>
+
+          <br />
+
+          <div>
+            <label>Is your institution primarily an undergraduate institution?</label>&nbsp;<%= f.select :undergraduate_institution, %w{ No Yes } %>
+        </div>
+
+        <br />
+
+        <div>
+          <p>Please comment on the quality of the applicant's previous work, academic abilities, and potential as a researcher. If applicable, please comment on any circumstances that may be helpful in evaluating the applicant's academic performance.</p>
+          <p>You can copy and paste into the text box below.</p>
+        </div>
+
+        <div><%= f.text_area :body, rows: 5 %></div>
+        </div>
     </div>
+      </section>
+</div> <!-- end .row -->
+</div> <!-- end .span9 -->
+<div class="span12">
+  <div class="inner">
+    <hr />
+    <p class='clear'><%= f.submit "Submit Recommendation Info", :class => "btn btn-success" %></p>
+    <p><em>Thank you for taking the time to evaluate this applicant. Your opinion will be carefully considered during participant selection.</em></p>
+  </div>
+</div>
 
-  </div> <!-- end .row -->
+</div> <!-- end .row -->
 
-<% end %>
+    <% end %>
