fix possibility of missing links

--- a/app/views/rails_admin/main/_applicant_academic_records.html.erb
+++ b/app/views/rails_admin/main/_applicant_academic_records.html.erb
@@ -2,7 +2,11 @@
 
 <ul>
   <%- records.map do |r| -%>
-    <li><%= raw %{#{applicant.academic_record(r)} #{link}} %></li>
+    <% if link %>
+      <li><%= raw %{#{applicant.academic_record(r)} #{link}} %></li>
+    <% else %>
+      <li><%= raw %{#{applicant.academic_record(r)}} %></li>
+    <% end %>
   <%- end -%>
 </ul>
 
