--- a/app/views/applicants/registrations/status.html.erb
+++ b/app/views/applicants/registrations/status.html.erb
@@ -61,9 +61,9 @@
   </div>
 </div>
 
-<% if current_applicant.state == 'completed_recommender_info' && !expired? %>
+<% if current_applicant.state == 'completed_recommender_info' %>
   <%= content_tag :div, content_tag(:p, link_to("Submit Application", submit_application_path, :class => "btn btn-success")), :class => 'inner' %>
-<% else %>
+<% elsif expired? %>
   <h3>The application deadline has past</h3>
 <% end %>
 
