add ability to add recommenders after submission

--- a/app/views/applicants/registrations/status.html.erb
+++ b/app/views/applicants/registrations/status.html.erb
@@ -37,6 +37,8 @@
         </li>
       <%- end -%>
     </ul>
+    <%=link_to "Add a Recommender", applicants_recommenders_url, :class => 'btn btn-default' %>
+
   </div>
 
   <hr class='clear inner' />
