--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -20,7 +20,8 @@
           = link_to 'Current Projects', "http://ecm.ucsd.edu/REU.html"
         %li{class: params[:controller] == 'applicants/registrations' && params[:action] !=  'status' ? 'active' : ''}
           - if applicant_signed_in?
-            =link_to "Profile", edit_applicant_registration_path, :class => 'active'
+            =link_to "Profile", edit_applicant_registration_path, :class => 'active' unless current_applicant.submitted_at
+
           - else
             =link_to "Apply Now", new_applicant_registration_url, :class => 'active'
             =content_tag :li, link_to('Admin', rails_admin_path) if !current_user
@@ -39,12 +40,11 @@
         - if params[:controller] == 'applicants/recommenders'
           %li.active
             - if applicant_signed_in?
-              =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
+              =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
         - else
           %li
             - if applicant_signed_in?
-              =link_to "Recommendation", applicants_recommenders_url, :class => 'active' unless current_applicant.submitted_at
-
+              =link_to "Recommendation", applicants_recommenders_url, :class => 'active'
 
         - if params[:controller] == 'applicants/registrations' && params[:action] ==  'status'
           %li.active
