--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,23 +3,19 @@
     .col-md-12
       %h3 General Info
     .col-md-5
-      = image_tag('ucsd_eng_bldg.jpeg', class: 'pull-left img-responsive center-block')
+      = image_tag('REU2016.jpg', class: 'pull-left img-responsive center-block')
     .col-md-7
       = raw Snippet[:general_description]
     .col-md-12
-      - if expired?
-        %h3.deadline
-          The deadline for applications has passed. Please sign in to see existing application status.
-      - else
-        %h3.deadline
-          Application Deadline #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]}
-        .app_button
-          - if applicant_signed_in? && current_applicant.state == 'submitted'
-            = link_to "Check Status", applicant_status_url, :class => "btn btn-lg btn-success"
-          - elsif applicant_signed_in?
-            = link_to "Finish Application", edit_applicant_registration_path, :class => "btn btn-lg btn-success"
-          - else
-            = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-lg btn-success"
+      %h3.deadline
+        Applications will be available in January 2017 for the Summer 2017 Program. Applications will be due on February 15, 2017 and Decisions sent to applicants by March 15, 2017.
+      .app_button
+        - if applicant_signed_in? && current_applicant.state == 'submitted'
+          = link_to "Check Status", applicant_status_url, :class => "btn btn-lg btn-success"
+        - elsif applicant_signed_in?
+          = link_to "Finish Application", edit_applicant_registration_path, :class => "btn btn-lg btn-success"
+        - else
+          = link_to "Apply Now", new_applicant_registration_path, :class => "btn btn-lg btn-success"
 
   .col-md-12
     %section.col-md-4
