--- a/app/assets/stylesheets/css/style-blue3.css
+++ b/app/assets/stylesheets/css/style-blue3.css
@@ -2574,7 +2574,7 @@ textarea.form-control:focus {
   position: relative;
   padding-left: 5px;
 }
-.radio label::before {
+/*.radio label::before {
   content: "";
   display: inline-block;
   position: absolute;
@@ -2586,7 +2586,7 @@ textarea.form-control:focus {
   border-radius: 50%;
   background-color: #fff;
   transition: border 0.15s ease-in-out;
-}
+}*/
 .radio label::after {
   display: inline-block;
   position: absolute;
