--- a/app/views/applicants/registrations/edit.html.erb
+++ b/app/views/applicants/registrations/edit.html.erb
@@ -103,9 +103,9 @@
     <div class="panel-heading">Preferred Mentor</div>
     <div class="panel-body">
       <%= f.label :mentor_choice_1 %> *
-      <%= f.select :mentor1, options_for_select(%w{ Adah\ Almutairi Shaochen\ Chen Shu\ Chien Karen\ Christman Stephanie\ Fraley Joanna\ McKittrick Robert\ Sah Michael\ Sailor Shyni\ Varghese Liangfang/ Zhang}, @applicant.mentor1), { :class => "form-control" } %>
+      <%= f.select :mentor1, options_for_select(%w{ Adah\ Almutairi Shaochen\ Chen Shu\ Chien Karen\ Christman Adam\ Engler Stephanie\ Fraley Joanna\ McKittrick Robert\ Sah Michael\ Sailor Shyni\ Varghese Liangfang\ Zhang}, @applicant.mentor1), { :class => "form-control" } %>
       <%= f.label :mentor_choice_2 %> *
-      <%= f.select :mentor2, options_for_select(%w{ Adah\ Almutairi Shaochen\ Chen Shu\ Chien Karen\ Christman Stephanie\ Fraley Joanna\ McKittrick Robert\ Sah Michael\ Sailor Shyni\ Varghese Liangfang/ Zhang}, @applicant.mentor2), { :class => "form-control" } %>
+      <%= f.select :mentor2, options_for_select(%w{ Adah\ Almutairi Shaochen\ Chen Shu\ Chien Karen\ Christman Adam\ Engler Stephanie\ Fraley Joanna\ McKittrick Robert\ Sah Michael\ Sailor Shyni\ Varghese Liangfang\ Zhang}, @applicant.mentor2), { :class => "form-control" } %>
     </div>
 
     <div class="panel-heading">Program Dates</div>
