--- a/app/views/layouts/_footer_text.html.haml
+++ b/app/views/layouts/_footer_text.html.haml
@@ -76,11 +76,13 @@
       %div.col-md-11
         %p
           If you have any comments, questions, or suggestions, please contact us at
-          %a(href='mailto:aengler@ucsd.edu')
-            aengler@ucsd.edu.
+          %a(href='mailto:dr.stegman@gmail.com')
+            dr.stegman@gmail.com.
         %p
           The REU Manager online application management system is freely available for use by other undergraduate research programs. Development for this project is supported by NSF EEC-1062979.
 
 %div#footer
   %span
-    © 2016. All rights reserved. XHTML1, CSS3, and Section 508 valid.
+    ©
+    = Time.current.year
+    All rights reserved. XHTML1, CSS3, and Section 508 valid.
