--- a/app/views/applicants/recommenders/edit.html.erb
+++ b/app/views/applicants/recommenders/edit.html.erb
@@ -1,18 +1,21 @@
 <div class="panel panel-primary">
-  <div class="panel-heading">Recomender Info</div>
+  <div class="panel-heading">Recommender Info</div>
   <div class="panel-body">
 
     <%= form_for(@applicant, :url => applicants_recommenders_url, :html => { :role => 'form', :method => :put }) do |f| %>
 
       <%= errors_for @applicant %>
 
-      <p><b>Please submit contact information for 2 letters of recommendation.</b></p>
+      <p><b>Please submit contact information for 1 letter of recommendation.</b></p>
 
       <%= f.fields_for :recommenders do |builder| %>
         <%= render 'recommender_fields', f: builder %>
       <% end %>
       <div class='add-container'>
-        <%= link_to_add_fields "Add recommender", f, :recommenders %>
+        <b>Please note that only ONE letter of recommendation is read for your application. Do NOT add a second recommender unless your first recommender did not respond or needs to be modified.</b>
+        <p>
+          <%= link_to_add_fields "Add recommender", f, :recommenders %>
+        </p>
       </div>
       <hr />
 
