--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -2,9 +2,9 @@
   .col-md-12
     .col-md-12
       %h3 General Info
-    .col-md-5
-      = image_tag('REU2016.jpg', class: 'pull-left img-responsive center-block')
-    .col-md-7
+    .col-md-6
+      = image_tag('REU-GLADE.JPG', class: 'pull-left img-responsive center-block')
+    .col-md-6
       = raw Snippet[:general_description]
     .col-md-12
       - if expired?
@@ -23,7 +23,7 @@
       - else
         %h3.deadline
           Applications will be available in #{Setting[:application_start].to_date.strftime("%A, %b %d")} for the Summer 2017 Program. Applications will be due on #{Setting[:application_deadline].to_date.strftime("%A, %b %d") if Setting[:application_deadline]} and Decisions sent to applicants by #{Setting[:notification_date].to_date.strftime("%A, %b, %d")}.
-      
+
 
 
   .col-md-12
