removed sign up links if app date is passed, put notice on sign up page that deadline is passed if it is past the deadline to apply (#17)

--- a/app/views/applicants/confirmations/new.html.erb
+++ b/app/views/applicants/confirmations/new.html.erb
@@ -17,7 +17,7 @@
         <%= f.submit "Resend confirmation instructions", :class => 'btn btn-ar btn-primary' %>
       <% end %>
 
-      <%= render :partial => "devise/shared/links" %>
+      <%= render :partial => "applicants/shared/links" %>
     </div>
   </div>
 </div>
