--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -13,7 +13,7 @@
 
         <%= f.submit "Send me reset password instructions", :class => 'btn btn-ar btn-primary' %>
       <% end %>
-      <%= render :partial => "devise/shared/links" %>
+      <%= render :partial => "applicants/shared/links" %>
     </div>
   </div>
 </div>
