--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -14,8 +14,7 @@
         <br />
         <%= f.submit "Resend unlock instructions", :class => 'btn btn-ar btn-primary' %>
       <% end %>
+      <%= render :partial => "applicants/shared/links" %>
     </div>
   </div>
-
-  <%= render :partial => "devise/shared/links" %>
 </div>
