--- a/app/views/applicants/shared/_links.erb
+++ b/app/views/applicants/shared/_links.erb
@@ -1,22 +1,24 @@
 <small>
 <%- if controller_name != 'sessions' %>
-  <%= link_to "Sign in", new_session_path(resource_name) %> |
+  <%= link_to "Sign in", new_session_path(resource_name) %> &nbsp;|
 <% end -%>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  &nbsp;<%= link_to "Sign up", new_registration_path(resource_name) %> |
+<%- if expired? != true %>
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    &nbsp; <%= link_to "Sign up", new_registration_path(resource_name) %> &nbsp;|
+  <% end -%>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  &nbsp;<%= link_to "Forgot your password?", new_password_path(resource_name) %>
+  &nbsp; <%= link_to "Forgot your password?", new_password_path(resource_name) %> &nbsp;|
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  &nbsp;| <%= link_to "Didn't receive confirmation?", new_confirmation_path(resource_name) %>&nbsp;|
+  &nbsp; <%= link_to "Didn't receive confirmation?", new_confirmation_path(resource_name) %>&nbsp;|
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-  <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %>
+  &nbsp; <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %>
 <% end -%>
 
 <%- if devise_mapping.omniauthable? %>
