welcome redirection, wip

--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -11,6 +11,9 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to 'Sign Up', main_app.new_grant_path, class: 'btn btn-xs'%></li>
+      </ul>
       <%= Refinery::Pages::MenuPresenter.new(refinery_menu_pages, self).to_html %>
     </div><!-- navbar-collapse -->
   </div><!-- container -->
