--- a/app/views/grants/new.html.erb
+++ b/app/views/grants/new.html.erb
@@ -1,6 +1,18 @@
-<h1>Step 1: Let's Create Your Account</h1>
+<section id="page">
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12" >
 
-<%= render 'form' %>
-
-
-<%= link_to 'Back', grants_path %>
+        <div class="inner">
+          <div class="panel panel-primary">
+            <div class = "panel-heading">Step 1: Create Your Account</div>
+            <div class="panel-body">
+              <%= render 'form' %>
+              <%= link_to 'Back', grants_path %>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
