--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -2,25 +2,25 @@
   <aside id="footer-widgets">
     <div class="container">
       <div class="row" id="sitem">
-        <div class="col-md-6"id="sitem">
+        <div class="col-md-12"id="sitem">
           <h3 class="footer-widget-title">Sitemap</h3>
           <ul class="list-unstyled three_cols">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="blog.html">Tour</a></li>
-            <li><a href="portfolio_sidebar.html">Pricing & Signup</a></li>
-            <li><a href="portfolio_topvar.html">Demo</a></li>
-            <li><a href="page_timeline_left.html">Support</a></li>
+            <li><a href="/info">Home</a></li>
+            <li><a href="https://reumanager.com/new_demo">Demo</a></li>
+            <li><a href="/info/pricing-signup/">Pricing & Signup</a></li>
+            <li><a href="/info/tour/">Tour</a></li>
+            <li><a href="mailto:support@notch8.com">Support</a></li>
           </ul>
-          <div class="col-md-6"id="subscribe">
+          <div class=""id="subscribe">
             <h3 class="footer-widget-title">Subscribe</h3>
-            <p>Lorem ipsum Amet fugiat elit nisi anim mollit minim labore ut esse Duis ullamco ad dolor veniam velit.</p>
+            <p>Subscribe to our newsletter to be notified of updates and information.</p>
+            <div class="input-group col-md-4">
+              <input type="text" class="form-control" placeholder="Email Adress">
+              <span class="input-group-btn">
+                <button class="btn btn-ar btn-primary" type="button">Subscribe</button>
+              </span>
+            </div><!-- /input-group -->
           </div>
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Email Adress">
-            <span class="input-group-btn">
-              <button class="btn btn-ar btn-primary" type="button">Subscribe</button>
-            </span>
-          </div><!-- /input-group -->
         </div>
       </div> <!-- row -->
     </div> <!-- container -->
