--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -4,4 +4,4 @@
 
 <p style='text-decoration:underline;'>Please note that requests for recommendations will not be sent until your portion of the application is complete. </p>
 
-<p>Please verify your account and continue your REU application by clicking the following link: <%= link_to confirmation_url(@resource, confirmation_token: @token), confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>Please verify your account and continue your REU application by clicking the following link: <%= link_to main_app.confirmation_url(@resource, confirmation_token: @token), main_app.confirmation_url(@resource, confirmation_token: @token) %></p>
