--- a/app/views/grants/_form.html.erb
+++ b/app/views/grants/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for(@grant, html: {id: 'payment-form'}) do |f| %>
   <% if @grant.errors.any? %>
     <div id="error_explanation">
@@ -13,38 +15,42 @@
 
   <div class="field">
     <%= f.label :grant_name %><br>
-    <%= f.text_field :program_title %>
+    <%= f.text_field :program_title, :style => 'width: 100%;', :placeholder => "Your Program's Title" %>
   </div>
     <div class="field">
     <%= f.label :subdomain %><br>
-    <%= f.text_field :subdomain %>
+    <%= f.text_field :subdomain, :style => 'width: 100%;', :placeholder => 'This will display as "yoursubdomain.reumanager.com"'%>
   </div>
 
   <%= f.fields_for :users, @grant.users.build do |user_form| %>
     <div class="field">
       <%= user_form.label :email %><br>
-      <%= user_form.email_field :email %>
+      <%= user_form.email_field :email, :style => 'width: 100%;' %>
     </div>
     <div class="field">
       <%= user_form.label :password %><br>
-      <%= user_form.password_field :password %>
+      <%= user_form.password_field :password, :style => 'width: 100%;' %>
     </div>
 
   <% end %>
 
   <div class="form-row">
     <label for="card-element">
-      Credit or debit card
+      Credit or debit card information
     </label>
     <div id="card-element">
       <!-- a Stripe Element will be inserted here. -->
     </div>
-
+    <br/>
+    <div class="field">
+      <%= f.label :coupon_code %><br>
+      <%= f.text_field :coupon_code, :style => 'width: 100%;'  %>
+    </div>
     <!-- Used to display Element errors -->
     <div id="card-errors" role="alert"></div>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit Payment', :class => 'btn btn-ar btn-primary' %>
   </div>
 <% end %>
