--- a/app/views/snippets/index.html.erb
+++ b/app/views/snippets/index.html.erb
@@ -1,11 +1,16 @@
-<h1>Set up your account</h1>
-<%= form_for(@grant, url: snippets_path, method: :post) do |f| %>
-
-  <%= f.fields_for :snippets do |snippets_f| %>
-    <%= snippets_f.label :value, snippets_f.object.name %>
-    <div class='hint'><%= snippets_f.object.description %></div>
-    <%= snippets_f.text_area :value, :class => 'span10', :rows => 4 %>
-  <% end %>
-
-  <%= f.submit :update %>
-<% end %>
+<div class="inner">
+  <div class="panel panel-primary">
+    <div class="panel-heading">Step 3: Configure Your Snippets</div>
+    <div class="panel-body">
+      <%= form_for(@grant, url: snippets_path, method: :post) do |f| %>
+        <%= f.fields_for :snippets do |snippets_f| %>
+        <%= snippets_f.label :value, snippets_f.object.name %>
+        <div class='hint'><%= snippets_f.object.description %></div>
+        <%= snippets_f.text_area :value, :class => 'form-control', :rows => 4 %>
+        <br/>
+        <% end %>
+        <%= f.submit :Update, :class => 'btn btn-ar btn-primary' %>
+      <% end %>
+    </div>
+  </div>
+</div>
